--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -8,6 +8,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - run: cowsay -f ghostbusters "  who ya gonna call?"
+      - run: cowsay -f ghostbusters "  who ya gonna call??"
 
 © 2021 GitHub, Inc.
