--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -8,4 +8,4 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - run: cowsay -f ghostbusters "  who ya gonna call???"
+      - run: cowsay -f ghostbusters "  who ya gonna call????"
