--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -8,7 +8,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - run: cowsay -f ghostbusters "  I'm 01!"
+      - run: cowsay -f ghostbusters "  I'm 01!!"
 
   cowsay02:
     runs-on: self-hosted
