--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -10,4 +10,4 @@ jobs:
       - uses: actions/checkout@v2
       - run: |
           echo "TEST" > ~/test.txt
-          cowsay -f ghostbusters "  `cat ~/test` "
+          cowsay -f ghostbusters "  `cat ~/test.txt` "
